removed MaxPermSize