@@ -12,7 +12,6 @@ lazy val root = (project in file("."))
       "-Xms1024m",
       "-Xmx1024m",
       "-XX:ReservedCodeCacheSize=128m",
-      "-XX:MaxPermSize=256m",
       "-Xss2m",
       "-Dfile.encoding=UTF-8",
       "-Dsbt.override.build.repos=true",
